tests/errors/collections/list_division_violations.sad
# Division of a list containing non-primitive values should complete without crashing Python
method foo() {}
items = [foo]
items = items / 42
show("Divide completed without crash")
